<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    
    <string name="menu_location">Location</string>
    <string name="menu_units">Unit System</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_color">Interface Colors</string>
    
    <string name="progress_dialog_message">Fetching weather..</string>
    
    <string-array name="weather_tab_names">
        <item>Today</item>
        <item>Tomorrow</item>
    </string-array>
    
    <string-array name="weather_unit_system">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    
    <string name="country_name">Location</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description</string>
    <string name="precipitation">&#xf04e;</string>
    <string name="wind">&#xf050;</string>
    <string name="humidity">&#xf021;</string>
    <string name="pressure">&#xf040;</string>
    <string name="days">Days</string>
    <string name="copyright">OpenWeatherMap.com</string>
    
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="mercury">mmHG</string>
    <string name="pascal">hPa</string>
    <string name="percent">%</string>
    <string name="speed">km/h</string>
    <string name="speed_imperial">mps</string>
    <string name="millimeter">mm</string>
    
    <string name="api_error">Could not get latest weather data</string>
    <string name="no_internet_error">No Internet connection</string>
    <string name="outdated_weather">Weather data is outdated</string>
    <string name="no_weather_data">No weather data!</string>
    
    <string name="dialog_location_title">Change Location</string>
    <string name="dialog_location_hint">City</string>
    <string name="dialog_units_title">Unit System</string>
    <string name="dialog_color_title">Change Colors</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    
    <!-- API from OpenWeatherMap.com -->
    <string name="open_weather_maps_api_key">4f787a099a90e6f7647f956036960520</string>
    <string name="open_weather_maps_header">x-api-key</string>
    <string name="open_weather_maps_url">http://api.openweathermap.org/data/2.5/weather?q=%s</string>
    <string name="open_weather_maps_forecast_url">http://api.openweathermap.org/data/2.5/forecast/daily?q=%s</string>
     
    <!-- Weather font icons -->
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
     
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    
    <string name="thermometer">&#xf055;</string>

</resources>